add new table row 2

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                   <td class="uk-text-center">1</td>
                   <td>Put your name here...</td>
                 </tr>
+                <tr>
+                  <td class="uk-text-center">1</td>
+                  <td>Pull request...</td>
+                </tr>
               </tbody>
             </table>
           </div>
