--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <tbody>
                 <tr>
                   <td class="uk-text-center">1</td>
-                  <td>Put your name here...</td>
+                  <td>Nur M Thariq</td>
                 </tr>
               </tbody>
             </table>
