--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                   <td class="uk-text-center">1</td>
                   <td>Nur M Thariq</td>
                 </tr>
+
+                <tr>
+                  <td class="uk-text-center">2</td>
+                  <td>Bhakti Mega Buana</td>
+                </tr>
               </tbody>
             </table>
           </div>
