--- a/index.html
+++ b/index.html
@@ -35,13 +35,9 @@
               <tbody>
                 <tr>
                   <td class="uk-text-center">1</td>
-                  <td>Nur M Thariq</td>
+                  <td>Muhammad Fathillah Daulay</td>
                 </tr>
 
-                <tr>
-                  <td class="uk-text-center">2</td>
-                  <td>Bhakti Mega Buana</td>
-                </tr>
               </tbody>
             </table>
           </div>
