--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                   <td class="uk-text-center">5</td>
                   <td>Aliffian Nurdin</td>
                 </tr>
+
+                <tr>
+                  <td class="uk-text-center">6</td>
+                  <td>Feri Setiawan</td>
+                </tr>
               </tbody>
             </table>
           </div>
