adding name in table arrow 2

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                   <td class="uk-text-center">1</td>
                   <td>Yudi Putra Wiratama </td>
                 </tr>
+                <tr>
+                  <td class="uk-text-center">2</td>
+                  <td>Dimas Prasetyo A W </td>
+                </tr>
               </tbody>
             </table>
           </div>
