Adding Muhammad Rifqy

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                   <td class="uk-text-center">6</td>
                   <td>Feri Setiawan</td>
                 </tr>
+                <tr>
+                  <td class="uk-text-center">6</td>
+                  <td>Muhammad Rifqy</td>
+                </tr>
               </tbody>
             </table>
           </div>
