adding name in table arrow 2_Dimas

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </tr>
                 <tr>
                   <td class="uk-text-center">2</td>
-                  <td>Dimas Prasetyo A W </td>
+                  <td>Dimas Prasetyo A</td>
                 </tr>
               </tbody>
             </table>
