--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                   <td class="uk-text-center">6</td>
                   <td>Feri Setiawan</td>
                 </tr>
+
+                <tr>
+                  <td class="uk-text-center">7</td>
+                  <td>Neval Ardiawan</td>
+                </tr>
               </tbody>
             </table>
           </div>
