--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                   <td class="uk-text-center">7</td>
                   <td>David Hartama</td>
                 </tr>
+                <tr>
+                  <td class="uk-text-center">7</td>
+                  <td>ranto</td>
+                </tr>
                 
               </tbody>
             </table>
